--- a/index.ipynb
+++ b/index.ipynb
@@ -118,7 +118,7 @@
    },
    "outputs": [],
    "source": [
-    "italy = None # 'Italy'\n",
+    "italy = con # 'Italy'\n",
     "italy"
    ]
   },
