--- a/index.ipynb
+++ b/index.ipynb
@@ -158,13 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mexico'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mexico = countries[]\n",
+    "mexico = countries[3]\n",
     "mexico"
    ]
   },
@@ -183,7 +192,7 @@
    },
    "outputs": [],
    "source": [
-    "kindof_neighbors = None\n",
+    "kindof_neighbors = \n",
     "kindof_neighbors"
    ]
   },
