--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
    },
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append # add code here"
    ]
   },
   {
