--- a/index.ipynb
+++ b/index.ipynb
@@ -456,7 +456,7 @@
    },
    "outputs": [],
    "source": [
-    "num_of_repeats = len(countries) - lennum_of_repeats # 3"
+    "num_of_repeats = len(countries) - len(unique_countries)num_of_repeats # 3"
    ]
   },
   {
