--- a/index.ipynb
+++ b/index.ipynb
@@ -450,13 +450,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "num_of_repeats = len(countries) - len(unique_countries)num_of_repeats # 3"
+    "num_of_repeats = len(countries) - len(unique_countries)\n",
+    "num_of_repeats # 3"
    ]
   },
   {
